--- a/.github/workflows/nombre del fichero.yml
+++ b/.github/workflows/nombre del fichero.yml
@@ -34,3 +34,10 @@ jobs:
         run: |
           echo Add other actions to build,
           echo test, and deploy your project.
+  nombre_2:
+    runs-on: ubuntu-latest
+
+    steps:
+      - uses: actions/checkout@v4
+      - name: nombre_2 step one
+        run: ls -l
