--- a/.github/workflows/nombre del fichero.yml
+++ b/.github/workflows/nombre del fichero.yml
@@ -35,6 +35,7 @@ jobs:
           echo Add other actions to build,
           echo test, and deploy your project.
   nombre_2:
+    needs: nombre_del_job
     runs-on: ubuntu-latest
 
     steps:
