--- a/.github/workflows/nombre del fichero.yml
+++ b/.github/workflows/nombre del fichero.yml
@@ -1,6 +1,6 @@
 # This is a basic workflow to help you get started with Actions
 
-name: CI
+name: Test App
 
 # Controls when the workflow will run
 on:
@@ -16,7 +16,7 @@ on:
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
   # This workflow contains a single job called "build"
-  nombre_del_job:
+  Test_funcion_sumar:
     # The type of runner that the job will run on
     runs-on: ubuntu-latest
 
@@ -34,8 +34,26 @@ jobs:
         run: |
           echo Add other actions to build,
           echo test, and deploy your project.
-  nombre_2:
-    needs: nombre_del_job
+  Test_funcion_restar:
+   
+    runs-on: ubuntu-latest
+
+    steps:
+      - uses: actions/checkout@v4
+      - name: nombre_2 step one
+        run: ls -l
+        
+  Test_funcion_multiplicar:
+   
+    runs-on: ubuntu-latest
+
+    steps:
+      - uses: actions/checkout@v4
+      - name: nombre_2 step one
+        run: ls -l
+
+  Test_funcion_dividir:
+   
     runs-on: ubuntu-latest
 
     steps:
