--- a/.github/workflows/nombre del fichero.yml
+++ b/.github/workflows/nombre del fichero.yml
@@ -1,27 +1,23 @@
-# This is a basic workflow to help you get started with Actions
+name: Test_calculadora
 
-name: Test App
+on: [push]
 
-# Controls when the workflow will run
-on:
-  # Triggers the workflow on push or pull request events but only for the "main" branch
-  push:
-    branches: [ "main" ]
-  pull_request:
-    branches: [ "main" ]
-
-  # Allows you to run this workflow manually from the Actions tab
-  workflow_dispatch:
-
-# A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
-  # This workflow contains a single job called "build"
-
   Test_calculadora:
-   
+    name: Ejecutar pruebas de calculadora
     runs-on: ubuntu-latest
 
     steps:
-      - uses: actions/checkout@v4
-      - name: nombre_2 step one
-        run: ls -l
+      - name: Clonar el repositorio
+        uses: actions/checkout@v3
+
+      - name: Configurar Python
+        uses: actions/setup-python@v4
+        with:
+          python-version: '3.10'
+
+      - name: Instalar dependencias
+        run: pip install pytest
+
+      - name: Ejecutar pruebas
+        run: pytest test_calculadora.py
