Update nombre del fichero.yml

--- a/.github/workflows/nombre del fichero.yml
+++ b/.github/workflows/nombre del fichero.yml
@@ -4,7 +4,7 @@ on: [push]
 
 jobs:
   Test_calculadora:
-    name: Ejecutar pruebas de calculadora
+    name: Testear calculadora
     runs-on: ubuntu-latest
 
     steps:
